# no-pass-plz

./: .gitignore  Cargo.toml  readme.md
crates/passwd-derive/: Cargo.toml
crates/passwd-derive/src/: lib.rs
src/: main.rs
src/gui/: app.rs  auth.rs  home.rs  misc.rs  mod.rs
